# aoc2025

day1/: LICENSE  tmp.cabal
day1/app/: Main.hs
day1/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day2/: day2.cabal
day2/app/: Main.hs
day2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
