cabal-version:      3.0
name:               day2
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Casper Beckman
maintainer:         casbeck0405@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day2
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    ghc-lib-parser ^>=9.8.5.20250214, base ^>=4.18.2.1
    hs-source-dirs:   app
    default-language: Haskell2010
